icon position changed

--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -169,7 +169,7 @@
                         </p>
                         <p class="text-success fw-medium" id="envioGratis">
                           <% if ( book.Stock <= 5 && book.Stock > 1 ) {%>
-                            ¡ENVÍO GRATIS! <i class="fa fa-solid fa-truck"></i>
+                            <i class="fa fa-solid fa-truck"></i> ¡ENVÍO GRATIS!
                           <% } else { "" } %>  
                         </p>
                       </div>
