--- a/views/Cesta.ejs
+++ b/views/Cesta.ejs
@@ -42,9 +42,9 @@
                 >Favorites</a
               >
             </li>
-            <li class="nav-item m-2">
+            <!-- <li class="nav-item m-2">
               <a class="nav-link active text-white" href="/Favorites">Cesta</a>
-            </li>
+            </li> -->
             <% if( session.Role === "Admin") { %>
             <li class="nav-item m-2">
               <a class="nav-link active text-white" href="/">admin. users</a>
