--- a/views/Favorites.ejs
+++ b/views/Favorites.ejs
@@ -42,11 +42,11 @@
                 >Favorites</a
               >
             </li>
-            <li class="nav-item m-2">
+            <!-- <li class="nav-item m-2">
               <a class="nav-link active text-white" href="/Cesta"
                 >Cesta</a
               >
-            </li>
+            </li> -->
             <% if( session.Role === "Admin") { %>
             <li class="nav-item m-2">
               <a class="nav-link active text-white" href="/">admin. users</a>
