--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -75,22 +75,24 @@
         <!-- Buscar por titulo de libro -->
         <div class="w-25 d-flex justify-content-end align-items-center">
           <div class="d-flex justify-content-end align-items-center">
-            <a
+            <% if( session.Role !== "Admin") { %>
+              <a
               href="/Cesta"
               class="me-1 d-flex justify-content-center align-items-center"
-            >
-              <p class="text-white">
-                <i
-                  class="h3 fa fa-regular fa-bag-shopping d-inline-block align-middle"
-                  ></i
-                >
-                <span
-                  class="badge badge-danger bg-danger badge-pill position-absolute"
-                  style="top: 30px; right: 230px; border-radius: 50%"
-                  ><%= totalNoti %>
-                </span>
-              </p>
-            </a>
+              >
+                <p class="text-white">
+                  <i
+                    class="h3 fa fa-regular fa-bag-shopping d-inline-block align-middle"
+                    ></i
+                  >
+                  <span
+                    class="badge badge-danger bg-danger badge-pill position-absolute"
+                    style="top: 30px; right: 230px; border-radius: 50%"
+                    ><%= totalNoti %>
+                  </span>
+                </p>
+              </a>
+            <% } %>
             <p class="text-white m-3 ms-5">
               <%= session.Name + " " + session.LastName %>
             </p>
