--- a/views/BooksInformation.ejs
+++ b/views/BooksInformation.ejs
@@ -65,14 +65,41 @@
                 <% } %>
               </ul>
             </div>
+            <!-- Buscar por titulo de libro -->
+            <form
+            class="d-flex input-group w-25"
+            method="post"
+            action="/BooksIndex">
+              <input name="searchName" type="text" class="me-3 form-control rounded"
+              placeholder="Buscar" width="200" value="<%= nameSearched !== "" ?
+              nameSearched : "" %>" />
+              <button type="submit" class="border-0 rounded-circle p-1 bg-white">
+                <span class="p-2" id="search-addon">
+                  <i class="fa fa-search"></i>
+                </span>
+              </button>
+            </form>
+            <!-- Buscar por titulo de libro -->
             <div class="w-25 d-flex justify-content-end align-items-center">
               <div class="d-flex justify-content-end align-items-center">
-                <a href="/Cesta" class="me-1 d-flex justify-content-center align-items-center">
-                  <p class="text-white">
-                    <i class="h3 fa fa-regular fa-bag-shopping d-inline-block align-middle"></i>
-                    <span class="badge badge-danger bg-danger badge-pill position-absolute" style="top: 30px; right: 230px; border-radius: 50%;"><%= totalNoti %> </span>
-                  </p>
-                </a>
+                <% if( session.Role !== "Admin") { %>
+                  <a
+                  href="/Cesta"
+                  class="me-1 d-flex justify-content-center align-items-center"
+                  >
+                    <p class="text-white">
+                      <i
+                        class="h3 fa fa-regular fa-bag-shopping d-inline-block align-middle"
+                        ></i
+                      >
+                      <span
+                        class="badge badge-danger bg-danger badge-pill position-absolute"
+                        style="top: 30px; right: 230px; border-radius: 50%"
+                        ><%= totalNoti %>
+                      </span>
+                    </p>
+                  </a>
+                <% } %>
                 <p class="text-white m-3 ms-5">
                   <%= session.Name + " " + session.LastName %>
                 </p>
@@ -102,7 +129,7 @@
           <!-- Primera parte -->
           <div class="bg-white p-5 d-flex align-items-start border-end border-disable border-1">
             <!-- IMAGE -->
-            <div class="w-25 d-flex align-items-center justify-content-center border border-1 border-danger me-5">
+            <div class="w-50 d-flex align-items-center justify-content-center me-4">
               <img src="<%= book.ImagePath %>" alt="" class="w-100 shadow">
             </div>
             <!-- IMAGE -->
@@ -114,13 +141,13 @@
               </p>
               <div class="ms-4 mt-5 mb-5 d-flex flex-row justify-content-center align-items-center">
                 <% if( book.firstGenre !== "") { %>
-                  <div class="bg-dark text-white p-2 rounded ms-2"><%= book.firstGenre %></div>
+                  <div class="bg-dark text-white p-2 rounded ms-2" style="font-size: 75%;"><%= book.firstGenre %></div>
                 <% } %>  
                 <% if( book.secondGenre !== "") { %>
-                  <div class="bg-dark text-white p-2 rounded ms-2"><%= book.secondGenre %></div>
+                  <div class="bg-dark text-white p-2 rounded ms-2" style="font-size: 75%;"><%= book.secondGenre %></div>
                 <% } %>  
                 <% if( book.thirdGenre !== "") { %>
-                  <div class="bg-dark text-white p-2 rounded ms-2"><%= book.thirdGenre %></div>
+                  <div class="bg-dark text-white p-2 rounded ms-2" style="font-size: 75%;"><%= book.thirdGenre %></div>
                 <% } %>  
               </div>
               <strong class="h5 mb-2">Resumen de <%= book.Title  %> </strong>
@@ -138,7 +165,15 @@
           <!-- Segunda parte -->
           <div class="bg-white p-5">
             <div>
-              <p class="h2 text-<%= book.Stock <= 5 && book.Stock <= 1 ? "dark text-decoration-line-through" : "black" %>  me-4">$<%= book.Price %></p>
+              <% if ( book.Stock <= 5 && book.Stock > 1 ) { %>
+                <div class="d-flex flex-row">
+                  <p class="fs-5 me-4 text-decoration-line-through text-danger">$<%= book.Price %></p>
+                  <span style="font-size: 85%;" class="bg-danger p-1 text-white w-100 h-25">-5% de dto. excusivo</span>
+                </div>
+                <p class="h2 me-4">$<%= Number(book.Price - 3.20).toFixed(2) %></p>
+              <% } else { %>
+                <p class="h2 text-<%= book.Stock <= 5 && book.Stock <= 1 ? "dark text-decoration-line-through" : "black" %>  me-4">$<%= book.Price %></p>
+              <% } %>
               <p class="w-100 <%= book.Stock <= 5 && book.Stock > 1 ? "text-success" : "text-decoration-line-through" %> ">
                 <i class="fa fa-solid fa-truck"></i><%= book.Stock <= 5 && book.Stock > 1 ? "¡ENVÍO GRATIS! " : "¡ENVÍO GRATIS! " %>
               </p>
@@ -578,7 +613,7 @@
         $('#description').text(shortDescription); // Reemplazar el contenido de la etiqueta p con el texto corto
         
         // Agregar un enlace "Mostrar más"
-        var showMoreLink = $('<a href="#">Mostrar más</a>');
+        var showMoreLink = $('<a href="#" style="color: #D9017A;">Mostrar más</a>');
         showMoreLink.click(function(e) {
           e.preventDefault(); // Prevenir el comportamiento predeterminado del enlace
           if (isExpanded) {
