--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -26,27 +26,27 @@
           <form id="register-form" method="POST" action="/guardar-datos">
             <form method="POST" action="/guardar-datos">
               <label for="nombre">Nombre:</label>
-              <input type="text" id="nombre" name="nombre" class="asd"/>
+              <input type="text" id="nombre" name="nombre" class="asd" required/>
         
               <label for="apellido">Apellido:</label>
-              <input type="text" id="apellido" name="apellido"  class="asd" />
+              <input type="text" id="apellido" name="apellido"  class="asd"  required/>
         
               <label for="correo">Correo:</label>
-              <input type="email" id="correo" name="correo"  class="asd" />
+              <input type="email" id="correo" name="correo"  class="asd"  required/>
         
               <label for="userName">Nombre de usuario:</label>
-              <input type="text" id="userName" name="userName"  class="asd" />
+              <input type="text" id="userName" name="userName"  class="asd" required />
         
               <label for="password">Contraseña:</label>
-              <input type="password" id="password" name="password"  class="asd" />
+              <input type="password" id="password" name="password"  class="asd"  required/>
         
               <% if( typeof userRole !== 'undefined' && userRole === 'Admin' ) { %>
-                <select id="options" name="options" class="form form-options">
+                <select id="options" name="options" class="form form-options" required>
                   <option value="Admin">Administrador</option>
                   <option value="User">Usuario</option>
                 </select>
               <% } else {%>
-                <input type="text" readonly name="options" value="User" class="asd">
+                <input type="text" readonly name="options" value="User" class="asd" required>
               <% } %>
 
             <input id="btn" type="submit" name="submit" value="Register" class="mainbox">
