Changes to add to car

--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -136,7 +136,7 @@
               <div class="ms-5 album mb-5">
                 <div class="row ms-5 row-cols-6">
                   <% booksList.forEach((book) => {%>
-                  <div class="col" id="elPapa" style="border: 1px solid #d0d0d0;">
+                  <div class="col d-flex justify-content-center align-items-center" id="elPapa" style="border: 1px solid #d0d0d0;">
                     <div 
                       class=""
                       id="grandFather"
