--- a/views/BooksInformation.ejs
+++ b/views/BooksInformation.ejs
@@ -215,9 +215,15 @@
               <input type="text" hidden value="<%= book.ImagePath %>" name="imagePathCar">
               <input type="text" hidden value="<%= book.Price %>" name="bookPriceCar">
               <!-- informaciones necesarias para el carrito -->
-              <div class="mt-2 mb-2 d-flex flex-row justify-content-center align-items-center">
-                <button type="submit" class="btn btn-outline-success" data-mdb-ripple-color="dark">Añadir a la cesta</button>
-              </div>
+              <% if ( book.Stock !== 0 ) { %>
+                <div class="mt-2 mb-2 d-flex flex-row justify-content-center align-items-center">
+                  <button type="submit" class="btn btn-outline-success" data-mdb-ripple-color="dark">Añadir a la cesta</button>
+                </div>
+              <% } else { %>
+                <div class="mt-2 mb-2 d-flex flex-row justify-content-center align-items-center">
+                  <a href="#" class="btn btn-outline-success text-decoration-line-through" data-mdb-ripple-color="dark">Añadir a la cesta</a>
+                </div>
+              <% } %>   
             </form>
             <!-- INCREIBLES OFERTAS -->
             <h6 class="p-2 text-center text-white fw-bold" style="background-color: #004D43;">
@@ -578,6 +584,22 @@
       </div>
     </div>
     <!-- MODAL SUCCESS ( COMPRA COMPLETADA ) -->
+
+    <!-- MODAL ERROR ADDING TO CAR -->
+    <div class="popup center border border-2 border-disable" id="errorAddingToCarModal">
+      <div class="iconx">
+        <p class="h1 text-danger fw-bold">X</p>
+      </div>
+      <div class="title">Error!</div>
+      <div class="description">
+        No puedes agregar este libro mas veces que 
+        la de su cantidad disponible.
+      </div>
+      <div class="dismiss-btn">
+        <button id="errorAddingToCarBtn">Cerrar</button>
+      </div>
+    </div>
+    <!-- MODAL ERROR ADDING TO CAR -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
