--- a/views/EditBook.ejs
+++ b/views/EditBook.ejs
@@ -119,7 +119,7 @@
     <div
       class="container d-flex flex-row mt-5 shadow-lg p-3 mb-5 bg-white rounded p-5 justify-content-around rounded"
     >
-      <img src="<%= book.ImagePath %>" id="preview" alt="" width="400" height="600" />
+      <img src="<%= book.ImagePath %>" id="preview" class="shadow" alt="" width="400" height="600" />
       
       <form
         action="/EditingBook"
