--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -164,19 +164,38 @@
                         <p class="fw-bold" id="bookTitleStyle"><%= book.Title %></p>
                         <p class="text-secondary"><%= book.Autor %></p>
                         <p></p>
-                        <p
-                          class="fw-bold text-<%= book.Stock == 0 ? 'danger' : `danger fs-4` %>"
-                        >
-                          <%= book.Stock == 0 ? "Temporalmente no disponible" : "$" + book.Price.toFixed(2) %>
-                        </p>
+                        <% if ( book.Stock <= 5 && book.Stock >= 1 ) { %>
+                          <div>
+                            <div class="d-flex flex-column">
+                              <p class="fs-5 me-4 text-decoration-line-through text-danger">$<%= book.Price %></p>
+                              <span style="font-size: 85%;" class="bg-danger p-1 text-white w-100 h-25">-5% de descuento</span>
+                            </div>
+                          </div>
+                        <% } %>  
+                        
+                        <% if ( book.Discount !== undefined )  { %>
+
+                          <p  class="fw-bold fs-4 text-dark">$<%= book.Discount %></p>
+
+                        <% } else { %>
+                          <p class="fw-bold text-<%= book.Stock == 0 ? "danger" : "dark fs-4" %> ">
+                            <%= book.Stock == 0 ? "Temporalmente no disponible" : "$" + book.Price.toFixed(2) %>
+                          </p>
+                        <% } %>   
+
+                        <div>
+                          <p class="fs-6">Comentarios <i class="fa fa-solid fa-comments text-primary"></i> <%= book.comments %></p>
+                        </div> 
                         
                         <p class="text-success fw-medium" id="envioGratis">
                           <% if ( book.Stock <= 5 && book.Stock > 1 ) {%>
                             <p class="text-success"><i class="fa fa-solid fa-truck"></i> ¡ENVÍO GRATIS!</p>
-                          <% } else { %>
-                            <p class="text-decoration-line-through text-danger"><i class="fa fa-solid fa-truck"></i> ¡ENVÍO GRATIS!</p>
-                          <% } %>  
+                          <% } %>
                         </p>
+
+                        <% if ( book.Stock <= 5 && book.Stock >= 1)  { %>
+                          <p class="fs-6 fw-bold" style="color: rgb(206, 136, 5);">QUEDAN POCAS UNIDADES</p>
+                        <% } %> 
                       </div>
                       <!-- INFORMATION -->
                     </div>
