--- a/views/Cesta.ejs
+++ b/views/Cesta.ejs
@@ -126,7 +126,9 @@
             <% allShoppingCar.forEach((item) => { %>
             <div class="d-flex flex-row">
               <div>
-                <img src="<%= item.bookImagePath %>" width="120" alt="" />
+                <a href="/BooksInformation?bookID=<%= item.bookId %>">
+                  <img src="<%= item.bookImagePath %>" width="120" alt="" />
+                </a>
               </div>
               <div class="w-100 ms-5">
                 <p class="fs-6">
@@ -146,6 +148,13 @@
                   </p>
                   <p>|</p>
                   <form action="/RemoveFromCar" method="post">
+                    <input type="text" hidden value="<%= item.shoppingCardId %>" name="removeCardId">
+                    <input type="text" hidden value="<%= Number(item.bookAmount) %>" name="removeTotalBooks">
+                    <button id="deleteBook" type="submit" class="text-primary border-0 bg-white p-0 m-0 ms-3 me-3 mb-3">Disminuir</button>
+                  </form>
+                  <p>|</p>
+                  <form action="/DeleteFromCar" method="post">
+                    <input type="text" hidden value="<%= item.bookId %>" name="removeBookId">
                     <input type="text" hidden value="<%= item.shoppingCardId %>" name="removeCardId">
                     <input type="text" hidden value="<%= Number(item.bookAmount) %>" name="removeTotalBooks">
                     <button id="deleteBook" type="submit" class="text-primary border-0 bg-white p-0 m-0 ms-2 mb-3">Eliminar</button>
