Soem changes to register
Some important changes

--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -19,7 +19,7 @@
       <div class="fullcontent">
         <div class="headings">
           <h1>Biblo - Register</h1>
-          <h2>Create an account to shop</h2>
+          <h2>Create an account</h2>
         </div>
         <div class="formbox">
           <h3>Register</h3>
@@ -57,5 +57,23 @@
       </div>
     </div>
 
+    <!-- MODAL ERROR ADDING TO CAR -->
+    <div class="popup center" id="userFoundModalWindow">
+      <div class="iconx">
+        <p class="h1 text-danger fw-bold">X</p>
+      </div>
+      <div class="title">Error!</div>
+      <div class="description">
+        Este nombre de usuario ya ha sido
+        registrado previamente, intente con uno
+        diferente.
+      </div>
+      <div class="dismiss-btn">
+        <button id="userFoundModalButton">Cerrar</button>
+      </div>
+    </div>
+    <!-- MODAL ERROR ADDING TO CAR -->
+
+    <script src="scripts/userRegister.js"></script>
   </body>
 </html>
