--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -113,6 +113,11 @@
     <div class="mt-5 mb-5">.</div>
     <!-- SEPARADOR -->
 
+    <div class="position-relative mt-5 mb-5">
+      <hr class="border-top border-secondary mt-n2">
+      <span class="position-absolute top-0 start-50 translate-middle bg-white px-4 fs-4 " style="font-family: 'Source Serif Pro';">Books</span>
+    </div>
+
     <!-- CONTENIDO -->
     <div class="container-fluid">
       <div class="row">
@@ -140,10 +145,10 @@
                     <div 
                       class=""
                       id="grandFather"
-                      style="background-color: #FFFFFF"
+                      style="background-color: #FFFFFF;"
                     >
                       <!-- image -->
-                      <div class="w-100 d-flex justify-content-center align-items-center position-relative">
+                      <div class="w-100 d-flex justify-content-center align-items-center position-relative" >
                         <% if ( book.createdDate === fechaHoy) { %>
                           <span class="position-absolute top-0 start-0 bg-success text-light p-1">Nuevo</span>
                         <% } %>  
@@ -154,47 +159,47 @@
                       <!-- image -->
               
                       <!-- cap type -->
-                      <div id="capType" class="w-100">
+                      <div id="capType" style="height: 4%;" class="w-100">
                         <p><%= book.PublishedYear > 2000 ? "Tapa Dura" : "Tapa Blanda" %></p>
                       </div>
                       <!-- cap type -->
               
                       <!-- INFORMATION -->
-                      <div id="informationSide" class="w-100 d-flex flex-column justify-content-start align-items-start">
-                        <p class="fw-bold" id="bookTitleStyle"><%= book.Title %></p>
-                        <p class="text-secondary"><%= book.Autor %></p>
+                      <div id="informationSide" class="w-100 d-flex flex-column justify-content-start align-items-start mb-0 mt-0">
+                        <p class="fw-bold" id="bookTitleStyle" style="font-size: 85%;"><%= book.Title %></p>
+                        <p class="text-secondary" style="height: 1%;"><%= book.Autor %></p>
                         <p></p>
                         <% if ( book.Stock <= 5 && book.Stock >= 1 ) { %>
-                          <div>
-                            <div class="d-flex flex-column">
-                              <p class="fs-5 me-4 text-decoration-line-through text-danger">$<%= book.Price %></p>
-                              <span style="font-size: 85%;" class="bg-danger p-1 text-white w-100 h-25">-5% de descuento</span>
+                          <div style="height: 7%;">
+                            <div class="d-flex flex-row">
+                              <p class="fs-5 me-4 text-decoration-line-through text-danger" >$<%= book.Price %></p>
+                              <span style="font-size: 85%;" class="bg-danger p-1 text-white h-25">-5%</span>
                             </div>
                           </div>
                         <% } %>  
                         
                         <% if ( book.Discount !== undefined )  { %>
 
-                          <p  class="fw-bold fs-4 text-dark">$<%= book.Discount %></p>
+                          <p  class="fw-bold fs-4 text-dark" style="height: 5%;">$<%= book.Discount %></p>
 
                         <% } else { %>
-                          <p class="fw-bold text-<%= book.Stock == 0 ? "danger" : "dark fs-4" %> ">
+                          <p class="fw-bold text-<%= book.Stock == 0 ? "danger" : "dark fs-4" %> " style="height: 15%;">
                             <%= book.Stock == 0 ? "Temporalmente no disponible" : "$" + book.Price.toFixed(2) %>
                           </p>
                         <% } %>   
 
-                        <div>
+                        <div style="height: 1%;">
                           <p class="fs-6">Comentarios <i class="fa fa-solid fa-comments text-primary"></i> <%= book.comments %></p>
                         </div> 
                         
-                        <p class="text-success fw-medium" id="envioGratis">
+                        <p class="text-success fw-medium" style=""  id="envioGratis">
                           <% if ( book.Stock <= 5 && book.Stock > 1 ) {%>
-                            <p class="text-success"><i class="fa fa-solid fa-truck"></i> ¡ENVÍO GRATIS!</p>
+                            <p class="text-success"><i class="fa fa-solid fa-truck"></i>¡ENVÍO GRATIS!</p>
                           <% } %>
                         </p>
 
                         <% if ( book.Stock <= 5 && book.Stock >= 1)  { %>
-                          <p class="fs-6 fw-bold" style="color: rgb(206, 136, 5);">QUEDAN POCAS UNIDADES</p>
+                          <p class="fw-bold" style="color: rgb(206, 136, 5); font-size: 78% ;">QUEDAN POCAS UNIDADES</p>
                         <% } %> 
                       </div>
                       <!-- INFORMATION -->
