--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -166,14 +166,14 @@
               
                       <!-- INFORMATION -->
                       <div id="informationSide" class="w-100 d-flex flex-column justify-content-start align-items-start mb-0 mt-0">
-                        <p class="fw-bold" id="bookTitleStyle" style="font-size: 85%;"><%= book.Title %></p>
+                        <p class="fw-bold" id="bookTitleStyle" style="max-width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%= book.Title %></p>
                         <p class="text-secondary" style="height: 1%;"><%= book.Autor %></p>
                         <p></p>
                         <% if ( book.Stock <= 5 && book.Stock >= 1 ) { %>
                           <div style="height: 7%;">
                             <div class="d-flex flex-row">
                               <p class="fs-5 me-4 text-decoration-line-through text-danger" >$<%= book.Price %></p>
-                              <span style="font-size: 85%;" class="bg-danger p-1 text-white h-25">-5%</span>
+                              <span style="font-size: 85%;" class="bg-danger p-1 text-white h-25">-14%</span>
                             </div>
                           </div>
                         <% } %>  
